<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">递康</string>
    <string name="permission_denied">请求已被拒绝</string>
    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限，\n\n请打开所需权限。</string>
    <string name="quit">关闭</string>
    <string name="connection_state">State: %s</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="mac_address">MAC: %s</string>
    <string name="ble_not_supported">当前版本不支持蓝牙功能</string>
    <string name="error_bluetooth_not_supported">设备不支持蓝牙功能</string>
    <string name="network_timeout">网络连接失败，请检查网络连接！</string>
    <string name="network_error">接口调用失败</string>
    <string name="file_download">文件下载</string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="pause">暂停</string>
    <string name="delete">删除</string>
    <string name="cont">继续</string>

    <!-- activity MainActivity -->
    <string name="sport"> 运动 </string>
    <string name="heart_rate"> 心率 </string>
    <string name="sleep"> 睡眠 </string>
    <string name="health"> 健康 </string>
    <string name="kaoqin"> 考勤 </string>
    <string name="expert"> 专家 </string>
    <string name="star"> 星座 </string>
    <string name="eat"> 饮食 </string>
    <string name="today"> 今日 </string>
    <string name="week"> 本周 </string>
    <string name="month"> 本月 </string>
    <string name="activity_home_tv_star"> 星座运势 </string>

    <!-- activity LoginActivity -->
    <string name="activity_login_et_name_hint"> 学号或教师号 </string>
    <string name="activity_login_et_password_hint">请输入密码 </string>
    <string name="activity_login_et_btn_login">登录</string>
    <string name="activity_login_et_btn_regist">注册</string>
    <string name="activity_login_by_phone">手机号登录 </string>
    <string name="activity_login_by_other">证件号登录 </string>
    <string name="activity_quit">退出</string>

    <!--activity BindPhoneActivity-->
    <string name="activity_bind_phone">手机号绑定</string>
    <string name="bindPhone">手机号 </string>
    <string name="sureCode">验证码 </string>
    <string name="getCode">获取验证码 </string>
    <string name="inputPhone">请输入手机号</string>
    <string name="inputCode">请输入验证码</string>

    <!--activity BasicbodyActivity-->
    <string name="simplebody">身体详情 </string>
    <string name="simplebodyheight">身高 </string>
    <string name="simplebodyheightunit">cm </string>
    <string name="simplebodyweight">体重 </string>
    <string name="simplebodyweightunit">kg </string>
    <string name="simplebodysubmit">提交 </string>
    <string name="simplebodyheighthint">请输入身高(50~300cm)</string>
    <string name="simplebodyweighthint">请输入体重(0~300kg)</string>


    <!--fragment MeActivity-->
    <string name="fragment_me_statics">运动统计 </string>
    <string name="fragment_me_setting">设备设置 </string>
    <string name="fragment_me_disturb">勿扰开关 </string>
    <string name="fragment_me_footprint">个人足迹 </string>
    <string name="fragment_me_body">身高体重 </string>
    <string name="fragment_me_phone">绑定手机号 </string>
    <string name="fragment_me_news">我的消息 </string>
    <string name="fragment_me_news_detail">消息详情 </string>
    <string name="fragment_me_help">帮助说明 </string>

    <!--activity Device Setting-->
    <string name="activity_device_push">消息推送 </string>
    <string name="activity_device_late">迟到提醒 </string>
    <string name="activity_device_clock">闹钟设置 </string>
    <string name="activity_set_clock">编辑闹钟 </string>
    <string name="activity_add_clock">添加闹钟 </string>
    <string name="activity_device_handsup">抬腕显示 </string>
    <string name="activity_device_antilost">防丢开关 </string>
    <string name="activity_device_shock">触摸震动 </string>
    <string name="activity_device_upgrade">固件升级 </string>
    <string name="activity_device_version">固件版本 </string>
    <string name="activity_device_heartrate">心率监控 </string>
    <string name="activity_device_sedentary">久坐提醒 </string>
    <string name="activity_device_sedentary_time">时间设置 </string>
    <string name="title_activity_alarm_clock_list">AlarmClockListActivity</string>

    <!--activity SetAlarmClockActivity-->
    <string name="alarm_set_datetime">设置时间</string>
    <string name="alarm_set_datetime_cycle">重复</string>
    <string name="alarm_set_type">类型</string>
    <string name="alarm_set_repeat_set">重复设置</string>
    <string name="alarm_set_zhouyi">周一</string>
    <string name="alarm_set_zhouer">周二</string>
    <string name="alarm_set_zhousan">周三</string>
    <string name="alarm_set_zhousi">周四</string>
    <string name="alarm_set_zhouwu">周五</string>
    <string name="alarm_set_zhouliu">周六</string>
    <string name="alarm_set_zhouri">周日</string>
    <string name="alarm_set_type_0">迟到提醒</string>
    <string name="alarm_set_type_1">运动</string>
    <string name="alarm_set_type_2">约会</string>
    <string name="alarm_set_type_3">喝水</string>
    <string name="alarm_set_type_4">吃药</string>
    <string name="alarm_set_type_5">睡眠</string>
    <string name="alarm_set_type_6">自定义</string>
    <string name="alarm_set_once">只响一次</string>
    <string name="alarm_set_clock_type">请输入闹钟类型</string>

    <!--activity ScanHeartRateActivity-->
    <string name="activity_set_heart">心率监测</string>
    <string name="activity_set_heartrate">监测频率</string>
    <string name="activity_call_heart">心率预警</string>
    <string name="activity_max_min">预警范围</string>
    <string name="activity_max_heartrate">最大心率</string>
    <string name="activity_min_heartrate">最小心率</string>
    <string name="scan_heart_rate_10">10分钟/次</string>
    <string name="scan_heart_rate_20">20分钟/次</string>
    <string name="scan_heart_rate_30">30分钟/次</string>
    <string name="scan_heart_rate_60">1 小时/次</string>

    <!--activity SetSedentaryActivity-->
    <string name="activity_Sedentary">久坐提醒</string>
    <string name="start_Sedentary">开始久坐时间</string>
    <string name="end_Sedentary">结束久坐时间</string>
    <string name="space_Sedentary">时间提醒间隔</string>
    <string name="space_Sedentary_30">30分钟</string>
    <string name="space_Sedentary_60">60分钟</string>
    <string name="space_Sedentary_90">90分钟</string>
    <string name="space_Sedentary_120">120分钟</string>

    <!--popup photo-->
    <string name="take_photo">拍照</string>
    <string name="select_photo">从手机相册选择</string>

    <!--activity SetMessagePushActivity-->
    <string name="messagepush">短信推送</string>
    <string name="qq">QQ推送</string>
    <string name="wechat">微信推送</string>
    <string name="facebook">Facebook推送</string>
    <string name="telephone">电话推送</string>
    <string name="notification_request">应用需要获取第三方应用通知权限，请点击确定，并在跳转页中打开Wristband应用开关。</string>

    <!--activity SportStatisticsActivity-->
    <string name="step">平均每日步数</string>
    <string name="calorie">平均每日大卡</string>
    <string name="date">最佳周</string>
    <string name="bestday">最佳日</string>
    <string name="sports">运动天数</string>
    <string name="standard">达标天数</string>
    <string name="setstep">设置目标</string>
    <string name="setstatistics">每天10000步是保持健康生活的方式</string>
    <string name="fansports">爱好者</string>
    <string name="amateursports">业余选手</string>
    <string name="professionalsport">专业队员</string>
    <string name="makesurestatistics">确认目标</string>

    <!--titles-->
    <string name="title_sport_sequence">运动排名</string>
    <string name="title_sport_history">运动历史</string>
    <string name="title_sport">心率运动模式</string>
    <string name="title_heart_rate_start">实时心率</string>
    <string name="title_sport_detail">心率运动模式详情</string>
    <string name="title_heart_rate_week">周心率</string>
    <string name="title_sleep">睡眠数据</string>
    <string name="title_attendance">考勤情况</string>
    <string name="title_get_school_sequence">到校时间排名</string>
    <string name="title_sport_video">运动视频</string>
    <string name="title_health_detail">健康详情</string>
</resources>
