<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/simplebody"
            android:textColor="@color/login_bg"
            android:textSize="@dimen/bodysimple"
            android:textStyle="bold"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_edit_marginleft"
            android:layout_marginRight="@dimen/login_edit_marginright"
            android:layout_marginTop="@dimen/login_edit_margintop">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_height_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textColorHint="@color/login_texthint"
                    android:textSize="@dimen/login_edit_hint" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:text="@string/simplebodyheight" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:text="@string/simplebodyheightunit" >
            </TextView>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_edit_marginleft"
            android:layout_marginRight="@dimen/login_edit_marginright"
            android:layout_marginTop="@dimen/login_edit_margintop">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/et_weight_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true">

                <EditText
                    android:id="@+id/et_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:inputType="textPassword"
                    android:textColorHint="@color/login_texthint"
                    android:textSize="@dimen/login_edit_hint" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:layout_centerVertical="true"
                android:text="@string/simplebodyweight" >
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:layout_centerVertical="true"
                android:text="@string/simplebodyweightunit" >
            </TextView>
        </RelativeLayout>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/login_btn_marginleft"
            android:layout_marginRight="@dimen/login_btn_marginright"
            android:layout_marginTop="@dimen/login_login_margintop"
            android:background="@drawable/login_bg_blue"
            android:text="@string/simplebodysubmit"
            android:textColor="@android:color/white"
            android:textSize="@dimen/login_edit_hint" />
    </LinearLayout>
</RelativeLayout>
