<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/click_to_dismiss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/popup_bg"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/popup_anima"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/width_50"
                android:text="@string/space_Sedentary"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_16"
                android:background="@drawable/repeat_set_top_bg"/>
            <RelativeLayout
                android:id="@+id/rl_10"
                android:layout_width="match_parent"
                android:layout_height="@dimen/width_50"
                android:clickable="true"
                android:background="@drawable/white_tab_bg">
                <TextView
                    android:id="@+id/tv_10"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_50"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/margin_10"
                    android:paddingEnd="0dp"
                    android:textSize="@dimen/textsize_14"
                    android:textColor="@color/black_text"
                    android:text="@string/scan_heart_rate_10"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_20"
                android:layout_width="match_parent"
                android:layout_height="@dimen/width_50"
                android:clickable="true"
                android:background="@drawable/white_tab_bg">
                <TextView
                    android:id="@+id/tv_20"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_50"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/margin_10"
                    android:paddingEnd="0dp"
                    android:textSize="@dimen/textsize_14"
                    android:textColor="@color/black_text"
                    android:text="@string/scan_heart_rate_20"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_30"
                android:layout_width="match_parent"
                android:layout_height="@dimen/width_50"
                android:clickable="true"
                android:background="@drawable/white_tab_bg">
                <TextView
                    android:id="@+id/tv_30"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_50"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/margin_10"
                    android:paddingEnd="0dp"
                    android:textSize="@dimen/textsize_14"
                    android:textColor="@color/black_text"
                    android:text="@string/scan_heart_rate_30"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_60"
                android:layout_width="match_parent"
                android:layout_height="@dimen/width_50"
                android:clickable="true"
                android:background="@drawable/white_tab_bg">
                <TextView
                    android:id="@+id/tv_60"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/width_50"
                    android:gravity="center_vertical"
                    android:paddingStart="13dp"
                    android:paddingEnd="0dp"
                    android:textSize="@dimen/textsize_14"
                    android:textColor="@color/black_text"
                    android:text="@string/scan_heart_rate_60"/>

            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>