<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context="lbcy.com.cn.wristband.activity.DeviceSettingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#f2f2f2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/rl_head"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="@dimen/width_120"
                        android:layout_height="@dimen/height_120"
                        android:layout_marginBottom="@dimen/margin_16"
                        android:layout_marginTop="@dimen/margin_16"
                        android:background="@android:color/white"
                        app:cardBackgroundColor="@color/colorAccent"
                        app:cardCornerRadius="60dp"
                        app:cardElevation="20dp">

                        <ImageView
                            android:id="@+id/iv_header"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:src="@mipmap/logo" />
                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/rl_me"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_16"
                            android:gravity="left"
                            android:text="@string/fragment_me_setting"
                            android:textColor="#110d0a"
                            android:textSize="@dimen/textsize_22"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tv_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_name"
                            android:layout_marginTop="@dimen/margin_10"
                            android:gravity="left"
                            android:text="1234645625235145"
                            android:textColor="@color/text_color_9"
                            android:textSize="@dimen/textsize_16" />

                        <RelativeLayout
                            android:id="@+id/rl_mac"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_id">

                            <TextView
                                android:id="@+id/tv_mac"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5"
                                android:text="MAC地址"
                                android:textColor="@color/text_color_9"
                                android:textSize="@dimen/textsize_16" />

                            <TextView
                                android:id="@+id/tv_macid"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/margin_5"
                                android:gravity="center"
                                android:text="12346"
                                android:textColor="@color/text_color_9"
                                android:textSize="@dimen/textsize_16" />
                        </RelativeLayout>

                        <TextView
                            android:id="@+id/tv_link"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="true"
                            android:layout_below="@+id/rl_mac"
                            android:layout_marginTop="@dimen/margin_10"
                            android:gravity="left"
                            android:text="设备已经连接"
                            android:textColor="@color/text_color_9"
                            android:textSize="@dimen/textsize_14" />
                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>


            <lbcy.com.cn.settingitemlibrary.SetItemView
                android:id="@+id/rl_push"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isShowUnderLine="false"
                app:leftIcon="@mipmap/push"
                app:leftText="@string/activity_device_push"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6"
                app:textSize="16" />

            <lbcy.com.cn.settingitemlibrary.SetItemView
                android:id="@+id/rl_late"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:leftIcon="@mipmap/late"
                app:leftText="@string/activity_device_late"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6"
                app:textSize="16" />

            <lbcy.com.cn.settingitemlibrary.SetItemView
                android:id="@+id/rl_clock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:leftIcon="@mipmap/clock"
                app:leftText="@string/activity_device_clock"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6"
                app:textSize="16" />

            <lbcy.com.cn.settingitemlibrary.SetItemView
                android:id="@+id/rl_handsup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                app:leftIcon="@mipmap/handsup"
                app:leftText="@string/activity_device_handsup"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6"
                app:textSize="16" />

            <lbcy.com.cn.settingitemlibrary.SetItemView
                android:id="@+id/rl_antilost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftIcon="@mipmap/antilost"
                app:leftText="@string/activity_device_antilost"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6"
                app:textSize="16" />

            <lbcy.com.cn.settingitemlibrary.SetItemView
                android:id="@+id/rl_shock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftIcon="@mipmap/shock"
                app:leftText="@string/activity_device_shock"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6"
                app:textSize="16" />

            <lbcy.com.cn.settingitemlibrary.SetItemView
                android:id="@+id/rl_upgrade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:leftIcon="@mipmap/upgrade"
                app:leftText="@string/activity_device_upgrade"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6"
                app:textSize="16" />

            <lbcy.com.cn.settingitemlibrary.SetItemView
                android:id="@+id/rl_heartrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="14dp"
                app:isShowUnderLine="false"
                app:leftIcon="@mipmap/heartrate"
                app:leftText="@string/activity_device_heartrate"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6"
                app:textSize="16" />

            <lbcy.com.cn.settingitemlibrary.SetItemView
                android:id="@+id/rl_sedentary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="14dp"
                app:isShowUnderLine="false"
                app:leftIcon="@mipmap/sedentary"
                app:leftText="@string/activity_device_sedentary"
                app:rightIcon="@drawable/task_arrow"
                app:textColor="@color/text_color_6"
                app:textSize="16" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>


