<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="lbcy.com.cn.wristband.activity.SetSedentaryActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_5"
        android:background="@color/mtpLightGray" />

    <!--久坐提醒 switch-->
    <lbcy.com.cn.settingitemlibrary.SetItemView
        android:id="@+id/rl_sedentary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isShowUnderLine="false"
        app:leftIcon="@mipmap/sedentary"
        app:leftText="@string/activity_Sedentary"
        app:switchselected="true">

    </lbcy.com.cn.settingitemlibrary.SetItemView>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/width_20"
        android:background="@color/mtpLightGray" />

    <!--开始久坐提醒-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_bar_save_right"
            android:paddingBottom="@dimen/title_bar_back_bottom"
            android:paddingTop="@dimen/title_bar_back_bottom"
            android:text="@string/start_Sedentary"
            android:textSize="@dimen/home_fragment_info_item_size"/>

        <Button
            android:id="@+id/startSedentary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_40"
            android:layout_marginStart="@dimen/margin_50"
            android:layout_marginEnd="@dimen/margin_50"
            android:background="@drawable/btn_sedentary_bg"
            android:textColor="@color/black_text"
            android:text="09:00"/>

    </LinearLayout>

    <!--结束久坐时间-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_bar_save_right"
            android:paddingBottom="@dimen/title_bar_back_bottom"
            android:paddingTop="@dimen/title_bar_back_bottom"
            android:text="@string/end_Sedentary"
            android:textSize="@dimen/home_fragment_info_item_size"/>

        <Button
            android:id="@+id/endSedentary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_40"
            android:layout_marginStart="@dimen/margin_50"
            android:layout_marginEnd="@dimen/margin_50"
            android:background="@drawable/btn_sedentary_bg"
            android:textColor="@color/black_text"
            android:text="09:00"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginStart="16dp"
            android:background="#99999999" />
    </LinearLayout>

    <!--时间提醒间隔-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/title_bar_save_right"
            android:paddingTop="@dimen/title_bar_back_bottom"
            android:paddingBottom="@dimen/title_bar_back_bottom"
            android:text="@string/space_Sedentary"
            android:textSize="@dimen/home_fragment_info_item_size"/>

        <Button
            android:id="@+id/spaceSedentary"
            android:layout_width="match_parent"
            android:layout_height="@dimen/width_40"
            android:layout_marginStart="@dimen/margin_50"
            android:layout_marginEnd="@dimen/margin_50"
            android:background="@drawable/btn_sedentary_bg_special"
            android:textColor="@color/black_text"
            android:text="30分钟"/>

    </LinearLayout>
</LinearLayout>
